--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,7 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="90dp"
+        android:layout_marginBottom="100dp"
         android:fillViewport="true">
 
         <LinearLayout
@@ -24,7 +24,7 @@
                 android:layout_height="160dp">
 
                 <ImageView
-                    android:id="@+id/img_bg"
+                    android:id="@+id/logo"
                     android:layout_width="match_parent"
                     android:layout_height="155dp"
                     android:background="@drawable/gradient_bg"
@@ -34,11 +34,12 @@
 
                 <ImageView
                     android:id="@+id/img_avatar"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="32dp"
-                    android:src="@drawable/avatar_placeholder"
+                    android:background="@drawable/cricle_bg"
+                    android:src="@drawable/logo_p3tskit"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -121,8 +122,8 @@
                         android:id="@+id/card_cat"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
-                        android:layout_marginStart="35dp"
-                        android:layout_marginEnd="35dp"
+                        android:layout_marginStart="30dp"
+                        android:layout_marginEnd="30dp"
                         android:clickable="true"
                         android:focusable="true"
                         app:cardCornerRadius="12dp"
@@ -157,7 +158,6 @@
                         android:layout_marginLeft="20dp"
                         android:text="@string/newsletter"
                         android:textSize="18sp"
-                        android:textColor="@color/black"
                         android:textStyle="bold" />
 
                     <TextView
