--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,11 +7,11 @@
 
     <ImageView
         android:id="@+id/img_profile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/avatar_placeholder"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:src="@drawable/logo_p3tskit"
         android:contentDescription="@string/profile_picture"
-        android:background="@drawable/circle_bg"
+        android:background="@drawable/cricle_bg"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
