--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -14,7 +14,7 @@
         android:gravity="center"
         android:paddingTop="20dp"
         android:layout_marginBottom="20dp"
-        android:textColor="@color/black"/>
+        android:textColor="@color/black" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -26,14 +26,75 @@
         androidapp:cardCornerRadius="12dp"
         androidapp:cardElevation="6dp">
 
-        <ImageView
-            android:id="@+id/scanImage"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:contentDescription="@string/image_preview"
-            android:src="@drawable/placeholder"
-            android:layout_margin="5dp"/>
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/scanImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:contentDescription="@string/image_preview"
+                android:src="@drawable/scancatdog"
+                android:layout_margin="5dp" />
+
+            <View
+                android:layout_width="30dp"
+                android:layout_height="5dp"
+                android:background="@color/green"
+                android:layout_gravity="top|start"
+                android:layout_margin="10dp" />
+
+            <View
+                android:layout_width="5dp"
+                android:layout_height="30dp"
+                android:background="@color/green"
+                android:layout_gravity="top|start"
+                android:layout_margin="10dp" />
+
+            <View
+                android:layout_width="30dp"
+                android:layout_height="5dp"
+                android:background="@color/green"
+                android:layout_gravity="top|end"
+                android:layout_margin="10dp" />
+
+            <View
+                android:layout_width="5dp"
+                android:layout_height="30dp"
+                android:background="@color/green"
+                android:layout_gravity="top|end"
+                android:layout_margin="10dp" />
+
+            <View
+                android:layout_width="30dp"
+                android:layout_height="5dp"
+                android:background="@color/green"
+                android:layout_gravity="bottom|start"
+                android:layout_margin="10dp" />
+
+            <View
+                android:layout_width="5dp"
+                android:layout_height="30dp"
+                android:background="@color/green"
+                android:layout_gravity="bottom|start"
+                android:layout_margin="10dp" />
+
+            <View
+                android:layout_width="30dp"
+                android:layout_height="5dp"
+                android:background="@color/green"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="10dp" />
+
+            <View
+                android:layout_width="5dp"
+                android:layout_height="30dp"
+                android:background="@color/green"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="10dp" />
+        </FrameLayout>
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
@@ -53,7 +114,7 @@
             android:text="@string/gallery"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:padding="12dp"/>
+            android:padding="12dp" />
 
         <Button
             android:id="@+id/buttonScan"
@@ -63,7 +124,7 @@
             android:textColor="@color/white"
             android:textSize="16sp"
             android:layout_marginEnd="8dp"
-            android:padding="12dp"/>
+            android:padding="12dp" />
 
         <Button
             android:id="@+id/buttonCamera"
@@ -72,8 +133,26 @@
             android:text="@string/camera"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:padding="12dp"/>
-
+            android:padding="12dp" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/howToUseText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="@string/howtouse"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:lineSpacingExtra="4dp" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 </LinearLayout>
