--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="light_pink">#FEF7FF</color>
     <color name="yellow">#FFE6D1</color>
     <color name="navy">#157DA8</color>
+    <color name="green">#00FF00</color>
 </resources>
