--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
                     android:layout_marginTop="12dp"
                     android:text="@string/title_hello"
                     android:textColor="@color/white"
-                    android:textSize="16sp"
+                    android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@id/img_avatar"
                     app:layout_constraintTop_toTopOf="@id/img_avatar" />
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:text="@string/user"
                     android:textColor="@color/white"
-                    android:textSize="18sp"
+                    android:textSize="24sp"
                     android:textStyle="bold"
                     android:layout_marginTop="3dp"
                     app:layout_constraintStart_toStartOf="@id/tv_hello"
@@ -74,17 +74,16 @@
                     android:layout_height="25dp"
                     android:layout_marginTop="12dp"
                     android:background="@drawable/whitehome_bg"
+                    android:layout_marginLeft="5dp"
                     android:gravity="center"
                     android:orientation="horizontal"
                     app:layout_constraintEnd_toEndOf="@+id/tv_user"
-                    app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="@+id/tv_user"
                     app:layout_constraintTop_toBottomOf="@id/tv_user">
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="5dp"
                         android:text="@string/app_name"
                         android:textColor="@color/black"
                         android:textSize="11sp"
@@ -93,8 +92,7 @@
                     <ImageView
                         android:layout_width="14dp"
                         android:layout_height="14dp"
-                        android:layout_marginLeft="7dp"
-                        android:layout_marginTop="0.5dp"
+                        android:layout_marginStart="7dp"
                         android:src="@drawable/ic_baseline_arrow_circle_right_24" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -107,71 +105,36 @@
                 android:elevation="16dp">
 
                 <LinearLayout
-                    android:id="@+id/ll_cards"
-                    android:layout_width="match_parent"
-                    android:layout_height="140dp"
-                    android:layout_marginTop="4dp"
-                    android:gravity="center"
-                    android:elevation="3dp"
-                    android:orientation="horizontal"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent">
-
-                    <androidx.cardview.widget.CardView
-                        android:id="@+id/card_cat"
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:layout_marginStart="30dp"
-                        android:layout_marginEnd="30dp"
-                        android:clickable="true"
-                        android:focusable="true"
-                        app:cardCornerRadius="12dp"
-                        app:cardElevation="4dp"
-                        app:layout_constraintWidth_percent="1.0">
-
-                        <ImageView
-                            android:id="@+id/img_cat"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
-                            android:contentDescription="@string/content_cat" />
-                    </androidx.cardview.widget.CardView>
-                </LinearLayout>
-
-                <LinearLayout
                     android:id="@+id/ll_tv_news"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:layout_marginHorizontal="16dp"
-                    android:layout_marginTop="25dp"
-                    app:layout_constraintTop_toBottomOf="@id/ll_cards"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <TextView
                         android:id="@+id/tv_news"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:layout_marginLeft="20dp"
+                        android:layout_marginLeft="12dp"
                         android:text="@string/newsletter"
-                        android:textSize="18sp"
+                        android:textSize="20sp"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/tv_see_more_news"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
                         android:text="@string/see_more"
                         android:textColor="@color/navy"
                         android:textStyle="bold"
-                        android:textSize="14sp"
+                        android:textSize="17sp"
                         android:clickable="true"
                         android:focusable="true"
-                        android:layout_marginRight="12dp"
+                        android:layout_marginEnd="12dp"
                         android:paddingEnd="8dp" />
                 </LinearLayout>
 
@@ -180,8 +143,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    tools:listitem="@layout/item_news"
                     app:layout_constraintTop_toBottomOf="@id/ll_tv_news"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
